k8s/practice/bb-file.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - image: busybox
    name: busybox
    resources: {}
    command: ["sleep"]
    args: ["1h"]
    volumeMounts:
    - name: config-volume
      mountPath: /etc/
  volumes:
  - name: config-volume
    configMap:
      name: space-system	
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
