k8s/practice/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: test-secret
  - name: cm-volume
    configMap:
      name: test-cm
  - name: test-cm-file
    configMap:
      name: test-cm-file
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: secret-volume
      mountPath: /test/
    - name: cm-volume
      mountPath: /test1/
    - name: test-cm-file
      mountPath: /test2/test1.properties
      subPath: test1.properties
