k8s/practice/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    ports:
    - containerPort: 80
    - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels: 
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 9200
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      name: https
      protocol: TCP
