k8s/practice/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx # pick a name
spec:
  podSelector:
    matchLabels:
      app: nginx # selector for the pods
  ingress: # allow ingress traffic
  - from:
    - podSelector: # from pods
        matchLabels: # with this label
          access: granted
      namespaceSelector:
        matchLabels:
         kubernetes.io/metadata.name: default

    ports:
    - protocol: TCP
      port: 9700
