k8s/practice/np2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      ports:
        - protocol: TCP
          port: 6000
          endPort: 7000
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 5978
          endPort: 7000
