k8s/practice/pod-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-1
  namespace: dest
spec:
  podSelector:
    matchLabels:
      app: dest
  policyTypes:
    - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: src
        podSelector:
          matchLabels:
            app: src
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: dest
spec:
  podSelector:
    matchLabels:
      app: dest
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: dest
  name: nginx
  namespace: dest
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels: 
    app: nginx
  namespace: dest
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: dest
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: src
  name: nginx
  namespace: src
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    ports:
    - containerPort: 80
---
